# Finance-splitting-program

./: Adding_new_transactions_start.py  Finance-splitting-program.py  New_transactions_added.py  README.md  Retrieval_added.py  Updated_create_new_list.py  create_new_listcopy.py  pyproject.toml
